# kamaros

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/application/: export_archive.rs  garbage_collect.rs  import_archive.rs  mod.rs  restore_version.rs  save_checkpoint.rs
core/src/domain/: blob.rs  manifest.rs  manifest_test.rs  mod.rs  version.rs  version_test.rs
core/src/infrastructure/: aes_encryptor.rs  memory_storage.rs  mod.rs  sha256_hasher.rs  simple_diff.rs
core/src/ports/: mod.rs
docs/: 00-narrative-explanation.md  API.md  ARCHITECTURE.md  IMPLEMENTATION_SPEC.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_METRICS.md
docs/01-introduction/: 01-overview.md  02-problem-statement.md  03-key-concepts.md  04-use-cases.md
docs/02-core-concepts/: 01-jcf-format.md  02-time-travel-versioning.md  04-content-addressing.md  05-streaming-architecture.md  06-platform-abstraction.md
docs/02-core-concepts/examples/: README.md  delta-example.patch  format-specification.md  manifest-example.json  manifest-minimal.json  usage-examples.md
docs/03-architecture/: 01-system-overview.md  05-design-patterns.md  06-data-structures.md  07-architecture-diagrams.md  08-ports-architecture.md
docs/04-technical-decisions/: 01-rust-vs-typescript.md  02-hybrid-architecture.md  03-compression-library.md  04-diff-algorithm.md  05-concurrency-model.md  06-performance-rationale.md
docs/05-algorithms/: 01-save-checkpoint.md  02-restore-version.md  03-diff-generation.md  04-patch-application.md  05-garbage-collection.md  06-file-rename-tracking.md  07-conflict-resolution.md
docs/06-implementation/: 01-project-structure.md  02-naming-conventions.md  03-coding-standards.md  04-module-organization.md  05-error-handling.md  06-testing-strategy.md  07-build-pipeline.md
docs/07-api-reference/: 01-jcf-manager-class.md  02-core-methods.md  03-query-methods.md  04-utility-methods.md  06-rust-bindings.md  07-python-bindings.md  08-filesystem-adapters.md  09-events-api.md  10-error-handling.md
docs/08-usage-guide/: 01-installation.md  02-quick-start.md  03-basic-operations.md  04-versioning-workflow.md  05-working-with-binaries.md  06-streaming-large-files.md  07-platform-specific.md  08-advanced-patterns.md  09-cli-commands.md
docs/09-edge-cases/: 01-file-renames.md  02-type-changes.md  03-orphaned-blobs.md  04-corrupted-data.md  05-memory-limits.md  06-concurrent-access.md
docs/10-development/: 01-setup-environment.md  02-building-from-source.md  03-running-tests.md  04-debugging-guide.md  05-contributing.md  06-implementation-roadmap.md
docs/ADR/: 001-content-addressable-storage.md  002-encryption-at-rest.md  003-zip-format.md
docs/api/: JCFManager.md  types.md
docs/architecture/: 01-overview.md  02-jcf-format.md  03-reverse-delta.md  04-cas-blobs.md  05-adapters.md
examples/: README.md
examples/core/: README.md
examples/js/: README.md
examples/js/browser/: index.html  main.ts  package.json  tsconfig.json  vite.config.ts
examples/js/node/: index.ts  package.json  server.ts
examples/python/: 01_basic_workflow.py  02_file_operations.py  03_version_history.py  04_save_load_archive.py  05_comprehensive_demo.py  06_concurrency_test.py  97_roadmap_test.py  98_portable_test.py  99_api_test.py  README.md  api_reference_demo.py  comprehensive_demo.py  demos.md  simple_workflow.py
examples/ts/: simple-workflow.ts
js/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
js/src/: index.ts  wasm.ts
js/src/__tests__/: adapters.test.ts  checkpoint.test.ts  manager.test.ts
js/src/adapters/: IndexedDBAdapter.ts  MemoryAdapter.ts  NodeAdapter.ts  OPFSAdapter.ts
js/src/api/: JCFManager.ts
js/tests-e2e/: adapters.spec.ts  index.html
pyo3/: Cargo.toml
pyo3/src/: lib.rs
python/: README.md  pyproject.toml
python/python/kamaros/: __init__.py  adapters.py  manager.py
python/tests/: conftest.py  test_adapters.py  test_checkpoint.py  test_concurrency.py  test_manager.py
python/tests/integration/: test_workflow.py
python/tests/unit/: test_manager_unit.py
tests/e2e/: browser-opfs.spec.ts  package.json  playwright.config.ts
wasm/: Cargo.toml
wasm/src/: error.rs  js_adapter.rs  lib.rs
