[package]
name = "kamaros-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Kamaros JCF Manager"

[lib]
name = "kamaros"
crate-type = ["cdylib"]

[dependencies]
kamaros-corelib = { path = "../core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.22"
